<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".CheckTestResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/test_result"
                android:textColor="@android:color/white"
                android:textSize="@dimen/player_font_setting_size" />

            <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/player_padding"
                android:layout_alignParentRight="true"
                android:text="@string/test_exit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/player_font_setting_size" />

            <Button
                android:id="@+id/goto_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/player_padding"
                android:layout_toLeftOf="@id/exit"
                android:text="@string/test_mode"
                android:textColor="@android:color/black"
                android:textSize="@dimen/player_font_size" />

            <Button
                android:id="@+id/goto_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/player_padding"
                android:layout_toLeftOf="@id/goto_left"
                android:text="@string/test_video"
                android:textColor="@android:color/black"
                android:textSize="@dimen/player_font_size" />

        </RelativeLayout>

        <TextView
            android:id="@+id/test_final_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_fail" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</ScrollView>